# cmabfgs-research

./: .gitattributes  .gitignore  .rgignore  README.md  TODO.md  pyproject.toml  pyrightconfig.json  requirements.txt
experiments/bbob/: experiment.py
experiments/bbob/conf/: cmabfgs.yaml  cmaes.yaml  config.yaml  shared.yaml
experiments/bfgs_hybrids/: main.py  run.sbatch  run_many.sh  run_many_test.sh
experiments/cmaes_matrix_convergence/: config.txt  main.py  run.sbatch  run_many.sh
experiments/cov_mat_scaling_analysis/b_scaling_comparison/: experiment.py
experiments/cov_mat_scaling_analysis/c_scale_convergence/: config.yaml  experiment.py  slurm.yaml
experiments/experimentum_crucis/: config.txt  experimentum_crucis.py  run.sbatch  run_many.sbatch  view_plots.sh  visualize.py
experiments/experimentum_crucis/notebooks/: exploration.ipynb
experiments/find_switch_condition/: config.txt  main.py  run.sbatch  run_many.sh
experiments/find_switch_interval/: common.py
experiments/find_switch_interval/cmabfgs/: config.txt  (+9 more)
experiments/manuscript_visualization/: convergence_curve_comparison.py  elliptic_d2_population.py  optimum_position.py  plot_elliptic.py
experiments/quad_convergence/: config.txt  exploration.ipynb  quad_convergence.py  run.sbatch  run_many.sbatch  visualize.py
experiments/switch_grid_search/: config.txt  display_bug.py  postprocessing.py  run.sbatch  run_many.sh  run_many_local.sh  switch_grid_search.py  validate_results.py
lib/: bound_handling.py  callbacks.py  cec.py  enums.py  funs.py  metrics.py  metrics_collector.py  optimizers.py  plotting_util.py  random.py  serde.py  stopping.py  util.py
lib/optimizers/: __init__.py  base.py  bfgs.py  cmabfgs.py  cmaes.py  golden_search.py  goldencmaes.py  lbfgs.py  multi2.py  multicmabfgs.py
meeting_notes/: 02_01_26.md  07_01_26.md  30_12_25.md
scripts/: bfgs_hess_scale.parquet  bfgs_hess_scale.py  plot_elliptic.py
scripts/notebooks/: bfgs_hess_scale.ipynb
tests/lib/: test_bound_handling.py
(+7428 files in other folders)
