[project]
name = "thesis-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cecxx>=0.1.0a1",
    "cmaes>=0.11.1",
    "debugpy>=1.8.15",
    "ipython>=9.4.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.6",
    "opfunu==1.0.1",
    "pandas>=2.3.1",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "sympy>=1.14.0",
]

[tool.uv.sources]
cecxx = [
  { path = "/home/maksym/projects/cecxx/python", editable = true },
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true
